fix: filter icon and button gap

--- a/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/components/_action-group-menu.scss
+++ b/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/components/_action-group-menu.scss
@@ -64,3 +64,11 @@
 
   }
 }
+
+.button-group-button {
+  margin-left: 16px;
+}
+
+.dropdown-toggle {
+  margin-left: 16px;
+}
